--- a/myApp/src/pages/home/home.scss
+++ b/myApp/src/pages/home/home.scss
@@ -1,128 +1,153 @@
 page-home {
-
-}
-.contentbg{
-  background: url('assets/icon/homescreen.png');background-size: cover;
-}
-    .toolbar-background-md {
-        border-color: green;
-        background: green;
-    }
-    
-    .fishes {
-        position: relative;
-        top: 0;
-        left: 0;
-        height: 50px;
-        padding-top: 8px;
-        margin-top: 15px;
-        margin-left: 10px;
-        float: left;
-    }
-    
-    .fish {
-        position: absolute;
-        top: 0px;
-        left: 13%;
-        width: 80%;
-        color: #f3f3f3 !important;
-        font-size: 11px;
-        padding-top: 6px;
-        margin-top: 27px;
-        padding-left: 15px;
-    }
-    .playersactive:active{
-         background: rgba(255, 255, 255, 0.18);
-          color:#ef7a13;
-    }
-    .playersactive{
-        border-bottom:1px solid rgba(255, 255, 255, 0.53);
-      }
-      .courtcontent{
-        width: 100%;
-      }
- @media screen and (min-width : 320px) and (max-width : 500px) {
-.colorr{
-    background-color:rgba(5, 49, 78, 0.97);
-  }
     .logostyles{
-        width:120px;
-        height: 60px;
-        padding-right: 10px;
-        padding-bottom: 7px;
+        width:100%;
+        height:100%;
+        float:right;
     }
-        .fish {
-        padding-left: 15px;
+    .headingstyles{
+        margin-left: 13%;
+        color: #d2dde5;
+        font-size: 50px;
+        font-weight: 400;
+        text-shadow: 0 1px 0 #ccc,
+               0 2px 0 #c9c9c9,
+               0 3px 0 #bbb,
+               0 4px 0 #b9b9b9,
+               0 5px 0 #aaa,
+               0 6px 1px rgba(0,0,0,.1),
+               0 0 5px rgba(0,0,0,.1),
+               0 1px 3px rgba(0,0,0,.3),
+               0 3px 5px rgba(0,0,0,.2),
+               0 5px 10px rgba(0,0,0,.25),
+               0 10px 10px rgba(0,0,0,.2),
+               0 20px 20px rgba(0,0,0,.15);
+                cursor:pointer;
     }
-    .mainioncard{
-    width: 97%;
-}
-}
-.logostyles{
-   width:130px;
-   height: 70px;
-   padding-right: 10px;
-   padding-top: 8px;
-}
-.mainioncard{
-    background-color:transparent;
-    border: 1px solid rgba(140, 140, 140, 0.34);
-    padding-top: 7px;
-    margin: 12px 5px;
-    width: 99%;
-}
-  .playernamestyles{
-     font-size: 10px;
-     color: #fff;
-     text-transform: uppercase;
+    .contentbg{
+        background-color:#153b6d;
+        color:#fff;
+    }
+    .opstionstyles{
+        text-align: center;
+        border: 2px solid #bcccd8;
+        background-color: #143055;
+        color:#f1ee83;
+        margin-top: 10%;
+        cursor:pointer;
+        
+        
+    }
+    .democlass{
+        text-align: center;
+        background-color: #fff;
+        color:#fec010;
+        margin-top: 45%;
+        cursor:pointer;
+    }
+    .SignInShow{
+        position:fixed;
+        top:36%;
+    }
+    .SignInlogostyles{
+        border-radius: 1.5%;
+        margin-left: 38%;
+    }
+    .SignInclose{
+        margin-left: 45%!important;
+        width: 65% !important;
+        max-width: 60% !important;
+    }
+    ion-card img{
+        width:39% !important;
+        max-width:29% !important;
+        text-align: center;
+    }
+    .Signin-inputstyles{
+        border: 1px solid #0e6296;
+        color:#0e6296;
+        border-radius: 2px;
+        width:100%;
+        height:40px !important;
+        margin-top: 5%;
+        cursor:pointer;
+     }
+     .TournmentShow{
+         position:fixed;
+        top:12%;
+     }
+     .Tournment-inputstyles{
+        border: 1px solid #0e6296;
+        color:#0e6296;
+        border-radius: 2px;
+        width:100%;
+        height:40px !important;
+        cursor:pointer;
+     }
 
-  }
-   .playernamestyles:active{
-      color:#ef7a13;
-   }
-   .teamnames:active{
-       color:#ef7a13;
-   }
-  .courtnumber{
-      text-align: center;
-      color: #ef7a13 !important;
-      font-size: 20px;
-      font-weight: bold;
-  }
-  .subcards{
-       background-color: hsla(0, 0%, 100%, 0.08) !important;
-       border: 1px solid rgba(232, 232, 232, 0.34);
-       position: relative;
-       box-shadow: 0px 0px 9px 2px rgba(136, 136, 136, 0.56);
-       width: 96%;
-      /* margin: 12px 9px;*/
-      margin: 2% 2%;
-  }
-  .vsclass{
-      width:11%;
-  }
-  .teamnames{
-      width:33%;
-  }
-  .dateclass{
-      width: 17%;
-  }
- .colorr{
-    background-color:rgba(13, 43, 64, 0.59);
-    color:#fff;
-    padding: 6px;
-    margin: 0px;
-    text-transform: uppercase;
- }
- .team1color{
-  color: #bdbdbd;
- }
-  .team2color{
-  color: #bdbdbd;
- }
-  .datecolor{
-  color: #bdbdbd;
- }
- .vscolor{
-   color: #bdbdbd;
- }
+     .inputplaceholder::-webkit-input-placeholder { /* Chrome/Opera/Safari */
+        color: #0e6296;
+    }
+    .inputplaceholder::-moz-placeholder { /* Firefox 19+ */
+        color: #0e6296;
+    }
+    .inputplaceholder:-ms-input-placeholder { /* IE 10+ */
+        color: #0e6296;
+    }
+    .inputplaceholder:-moz-placeholder { /* Firefox 18- */
+        color: #0e6296;
+    }
+    //MEDIA QUERIES FOR MOBILE SCREENCE.
+    @media screen and (min-width : 320px) and (max-width : 700px) {
+        .headingstyles{
+            margin-left: 5%;
+            color: #d2dde5;
+            font-size: 19px;
+            font-weight: 400;
+            text-shadow: 0 1px 0 #ccc,
+                0 2px 0 #c9c9c9,
+                0 3px 0 #bbb,
+                0 4px 0 #b9b9b9,
+                0 5px 0 #aaa,
+                0 6px 1px rgba(0,0,0,.1),
+                0 0 5px rgba(0,0,0,.1),
+                0 1px 3px rgba(0,0,0,.3),
+                0 3px 5px rgba(0,0,0,.2),
+                0 5px 10px rgba(0,0,0,.25),
+                0 10px 10px rgba(0,0,0,.2),
+                0 20px 20px rgba(0,0,0,.15);
+                    cursor:pointer;
+        }
+        .opstionstyles{
+            text-align: center;
+            border: 2px solid #bcccd8;
+            background-color: #143055;
+            color:#f1ee83;
+            margin-top: 10%;
+            cursor:pointer;
+            font-size: 100%;
+            
+            
+        }
+        .ButtonsMobilstyles ion-col[width-33]{
+            flex: 0 0 80% !important;
+            max-width: 80% !important;
+        }
+        .Headingstylesinmobile ion-col[width-90]{
+            flex: 0 0 85% !important;
+            max-width: 85% !important;
+        }
+        .Logostylesinmobile ion-col[width-10]{
+            flex: 0 0 15% !important;
+            max-width: 15% !important;
+            
+        }
+        .DemoButtoninmobile ion-col[width-10]{
+            flex: 0 0 38% !important;
+            max-width: 38% !important;
+        }
+    }
+    //MEDIA QUERIES FOR TABES SCREENCE.
+    @media screen and (min-width :768px) and (max-width : 1023px){
+        
+    }
+}
